# college-length-estimator

./: .gitignore  CHANGELOG.md  README.md  meson.build
docs/: CLE.drawio
include/: courseviewer.hpp
src/: courseviewer.cpp  main.cpp  meson.build
src/divarktech/Jesse/Paone/: CLEGUI.java  FXMLDocument.fxml  FXMLDocumentController.java
src/divarktech/tyler/schmidt/: CLEImplementation.java  Course.java  RawCourseList.java  Term.java
src/ui/: courseviewer.ui
